--- a/style.css
+++ b/style.css
@@ -101,12 +101,14 @@
   /* Menu page styles */
   .menu-item {
     margin-bottom: 30px;
+    text-align: center;
   }
 
   .menu-item img {
     width: 100%;
     max-width: 300px;
     margin-bottom: 20px;
+    text-align: center;
   }
 
   /* Contact page styles */
@@ -206,11 +208,8 @@
     opacity: 0.8;
     color: rgb(26, 26, 26);
     width: 100%;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
   }
+
 
   @media (min-width: 768px) {
     .carousel-caption h1 {
@@ -237,13 +236,12 @@
     color: #ff6f61; /* Hover color */
   }
   .carousel-item {
-    margin: auto;
-    padding: auto;
+      margin: 10px;
   }
 
   .carousel-inner {
-    margin: auto;
-    padding: auto;
+    max-width: 100%;
+    max-height: 100%;
   }
   .carousel-caption {
     justify-content: space-between;
@@ -296,44 +294,44 @@
   }
 
   .back-to-top {
-    position: fixed;
-    visibility: hidden;
-    opacity: 0;
-    right: 15px;
-    bottom: 15px;
-    z-index: 996;
-    background: #ffb03b;
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    transition: all 0.4s;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    -o-border-radius: 0;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 5px solid;
+    border-color: #ffb03b;
+    border-radius: 20px;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: flexbox;
+    font-size: 18px;
+    margin: 4px 2px;
+    cursor: pointer;
+    opacity: 0.8;
+    color: rgb(26, 26, 26);
+    width: 100%;
   }
 
-  .text {
+    .text {
     top: 100px;
   }
 
   .menu-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Menu.jpg") no-repeat center center/cover;
+    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Menu.jpg") no-repeat center center/fixed;
     background-size: cover;
   }
 
   .reservations-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Reservations.jpg") no-repeat center center/cover;
+    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Reservations.jpg") no-repeat center center/fixed;
     background-size: cover;
   }
 
   .hours-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Hours.jpg") no-repeat center center/cover;
+    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Hours.jpg") no-repeat center center/fixed;
     background-size: cover;
   }
 
   .contact-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Contact.jpg") no-repeat center center/cover;
+    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Contact.jpg") no-repeat center center/fixed;
     background-size: cover;
   }
 
@@ -349,6 +347,3 @@
     margin-bottom: 2em;
   }
 
-  .footer a {
-    color: #ffff;
-  }
