--- a/style.css
+++ b/style.css
@@ -1,400 +1,327 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  /* Global styles */
+/* Global styles */
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.8;
+  color: #333333;
+  background-color: #f5f5f5;
+}
+@media (max-width: 600px) {
   body {
-    font-family: "Poppins", sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 1.8;
-    color: #333333;
-    background-color: #f5f5f5;
-  }
-
-  @media (min-width: 768px) {
-    /* Styles for the header */
-    .header {
-      position: flex;
-      color: #ffb03b;
-      z-index: -1;
-      padding: 0.5em;
-      font-family: "Poppins", sans-serif;
-      font-size: 20px;
-    }
-
-    /* Styles for the navbar */
-    .navbar {
-      position: relative;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      padding-top: 0;
-      padding-bottom: 0;
-      font-family: "Poppins", sans-serif;
-    }
-
-    /* Styles for the menu page */
-    .menu-item {
-      margin-bottom: 30px;
-    }
-
-    /* Styles for the hours page */
-    #calendar {
-      width: 100%;
-      height: 600px;
-    }
-    .container {
-      display: flexbox;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: auto;
-      grid-column-gap: 20px;
-      grid-row-gap: 20px;
-    }
-  }
-
-  /* Styles for screens with a width of 600px or less */
-  @media (max-width: 600px) {
-    /* Styles for the body */
-    body {
       background-size: auto;
-    }
+  }
+}
 
-    /* Styles for the menu page */
-    .menu-item img {
-      width: 100%;
-      max-width: 300px;
-      margin-bottom: 20px;
-    }
+/* Styles for screens with a width of 768px or more */
+@media (min-width: 768px) {
+  body {
+      background-size: cover;
+  }
+}
 
-    /* Styles for the contact page */
-    #map {
-      position: auto;
-      height: auto;
-      max-width: 100%;
-      top: 0;
-      bottom: 0;
-      left: 400px;
-      right: 0;
-    }
+a {
+  text-decoration: none;
+  color: #ffb03b;}
 
-    /* Styles for the hours page */
-    #calendar {
-      width: 100%;
-      height: 600px;
-    }
-    .container {
-      display: flexbox;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      grid-template-columns:0;
-    }
+a:hover {
+  color: #0078d7;
+}
 
-  a {
-    text-decoration: none;
-    color: #ffb03b;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Satisfy", cursive;
+}
 
-  a:hover {
-    color: #0078d7;
-  }
+.header {
+  position: flex;
+ background-color: #ffb03b;
+ z-index: -1;
+ font-family: "Poppins", sans-serif;
+ font-size: 20px;
+ padding: 10px;
+}
 
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "Satisfy", cursive;
-  }
+.navbar-brand {
+  font-family: 'Satisfy', cursive;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-left: 20px;
+  text-shadow: #ffb03b;
+  color: #ffb03b;
+}
 
-  .header {
-    position: flex;
-   color: #ffb03b;
-   z-index: -1;
-   padding: 0.5em;
-   font-family: "Poppins", sans-serif;
-   font-size: 20px;
-  }
+.navbar {
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0;
+  font-family: "Poppins", sans-serif;
+}
 
-  .navbar-brand {
-    font-family: 'Satisfy', cursive;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin-left: 10px;
-  }
+.nav-link {
+  position: relative;
+}
 
-  .navbar {
-    position: relative;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 0;
-    padding-bottom: 0;
-    font-family: "Poppins", sans-serif;
-  }
+ul {
+  list-style-type: none;
+}
 
-  .nav-link {
-    position: relative;
-  }
+/* Home page styles */
+container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0);
+  padding-left: calc(var(--bs-gutter-x) * 0);
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
 
-  ul {
-    list-style-type: none;
-  }
+img {
+  max-width: 100%;
+  height: auto;
+}
 
-  /* Home page styles */
-  container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-    --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 0;
-    width: 100%;
-    padding-right: calc(var(--bs-gutter-x) * 0);
-    padding-left: calc(var(--bs-gutter-x) * 0);
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-  }
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
 
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+}
+.fakeimg-1 {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+  color: white;
 
-  /* Reservation page styles */
-  form {
-    margin-top: 50px;
-  }
+}
+/* Reservation page styles */
+form {
+  margin-top: 50px;
+}
 
-  label {
-    font-weight: 600;
-  }
+label {
+  font-weight: 600;
+}
 
-  /* Menu page styles */
-  .menu-item {
-    margin-bottom: 30px;
-    text-align: center;
-  }
+/* Menu page styles */
+.menu-item {
+  margin-bottom: 30px;
+}
 
-  .menu-item img {
-    width: 100%;
-    max-width: 300px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
+.menu-item img {
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 20px;
+}
 
-  /* Contact page styles */
-  #map {
-    position: auto;
-    height: auto;
-    max-width: 100%;
-    top: 0;
-    bottom: 0;
-    left: 400px;
-    right: 0;
-  }
+/* Contact page styles */
+#map {
+  position: auto;
+  height: auto;
+  max-width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 400px;
+  right: 0;
+}
 
-  /* Hours page styles */
-  #calendar {
-    width: 100%;
-    height: 600px;
-  }
-  .container {
-    display: flexbox;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-  }
+/* Hours page styles */
+#calendar {
+  width: 100%;
+  height: 600px;
+}
+.container {
+  display: flexbox;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
 
-  /* Styles for the hours-page container */
-  .hours-page {
-    padding: 20px;
-  }
+/* Styles for the hours-page container */
+.hours-page {
+  padding: 20px;
+}
 
-  /* Styles for the heading */
-  .hours-page h1 {
-    font-size: 36px;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-  }
+/* Styles for the heading */
+.hours-page h1 {
+  font-size: 36px;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-  /* Styles for the unordered list */
-  .hours-page ul {
-    list-style-type: none; /* remove bullet points */
-    margin: 0;
-    padding: 0;
-  }
+/* Styles for the unordered list */
+.hours-page ul {
+  list-style-type: none; /* remove bullet points */
+  margin: 0;
+  padding: 0;
+}
 
-  /* Styles for the list items */
-  .hours-page li {
-    font-size: 24px;
-    color: #555;
-    margin-bottom: 10px;
-  }
+/* Styles for the list items */
+.hours-page li {
+  font-size: 24px;
+  color: #555;
+  margin-bottom: 10px;
+}
 
-  /* Styles for the note */
-  .hours-page p {
-    font-size: 18px;
-    color: #999;
-    text-align: center;
-  }
-  #reservations-btn-1, #reservations-btn-2, #reservations-btn-3, #reservations-btn-4, #menu-btn, #menu-btn-1, #menu-btn-2, #menu-btn-3 {
-    justify-content: center;
-    background-color: transparent;
-    border: 5px solid;
-    border-color: #ffb03b;
-    border-radius: 20px;
-    padding: 5px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: flexbox;
-    font-size: 18px;
-    margin: 4px 2px;
-    cursor: pointer;
-    opacity: 0.8;
-    color: white;
-    width: 45%;
-    height: 50%;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-  }
-  #reservations-btn {
-    white-space: nowrap;
-    background-color: transparent;
-    border: 5px solid;
-    border-color: #ffb03b;
-    border-radius: 20px;
-    padding: 5px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    margin: 4px 2px;
-    cursor: pointer;
-    opacity: 0.8;
-    color: rgb(26, 26, 26);
-    width: 100%;
-  }
+/* Styles for the note */
+.hours-page p {
+  font-size: 18px;
+  color: #999;
+  text-align: center;
+}
+#reservations-btn-1, #reservations-btn-2, #reservations-btn-3, #menu-btn, #menu-btn-1, #menu-btn-2, #menu-btn-3 {
+  white-space: nowrap;
+  background-color: transparent;
+  border: 5px solid;
+  border-color: #ffb03b;
+  border-radius: 30px;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: flexbox;
+  font-size: 18px;
+  margin: 5px 2px;
+  cursor: pointer;
+  opacity: 0.8;
+  color: white;
+  width: 30%;
+}
+#reservations-btn {
+  white-space: nowrap;
+  background-color: transparent;
+  border: 5px solid;
+  border-color: #ffb03b;
+  border-radius: 20px;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  opacity: 0.8;
+  color: rgb(85, 85, 85);
+  width: 100%;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
 
+@media (min-width: 768px) {
+  .carousel-caption h1 {
+      font-size: 36px;
+  }
+  .carousel-caption p {
+      font-size: 24px;
+  }
+}
 
-  @media (min-width: 768px) {
-    .carousel-caption h1 {
-        font-size: 36px;
-    }
-    .carousel-caption p {
-        font-size: 24px;
-    }
+@media (max-width: 767px) {
+  .carousel-caption h1 {
+      font-size: 28px;
   }
+  .carousel-caption p {
+      font-size: 18px;
+  }
+  .carousel-caption-container {
+      padding: 10px;
+  }
+}
 
-  @media (max-width: 767px) {
-    .carousel-caption h1 {
-        font-size: 28px;
-    }
-    .carousel-caption p {
-        font-size: 18px;
-    }
-    .carousel-caption-container {
-        padding: 10px;
-    }
-  }
+.transparent-btn:hover, #menu-btn:hover {
+  color: #ff6f61; /* Hover color */
+}
+.carousel-item {
+  margin: 0;
+}
 
-  .transparent-btn:hover, #menu-btn:hover {
-    color: #ff6f61; /* Hover color */
-  }
-  .carousel-item {
-      margin: 10px;
-  }
+.carousel-inner {
+  margin: auto;
+  padding: auto;
+}
+.carousel-caption {
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+   position: relative;
+   font-size: 125%;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   padding: 15px;
+   background-color: rgba(0, 0, 0, 0.5);
+  margin: 0;
+  margin-bottom: 7em;
+  margin-right: 1em;
+}
+.caption-heading {
+  font-size: 2.4em;
+  padding-bottom: 5px;
+}
 
-  .carousel-inner {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .carousel-caption {
-    justify-content: space-between;
-    width: 100%;
-    height: auto;
-     position: relative;
-     font-size: 125%;
-     bottom: 0;
-     left: 0;
-     width: 100%;
-     padding: 15px;
-     background-color: rgba(0, 0, 0, 0.5);
-    margin: 0;
-    margin-bottom:5em;
-  }
-  .caption-heading {
-    font-size: 2.4em;
-    padding-bottom: 5px;
-  }
+.caption-paragraph {
+  font-size: 1em;
+  padding-bottom: 5px;
+}
 
-  .caption-paragraph {
-    font-size: 1em;
-    padding-bottom: 5px;
-  }
+.p1 {
+  margin-top: 40px;
+}
 
-  .p1 {
-    margin-top: 40px;
-  }
+.leftcolumn {
+  float: left;
+  width: 70%;
+  text-align: center;
+  margin-bottom: 30px;
+}
 
-  .leftcolumn {
-    float: left;
-    width: 100%;
-    background-color: #616060;
-    text-align: center;
-  }
+/* Right column */
+.rightcolumn {
+  flex-direction: column;
+  display: flex;
+  float: right;
+  width: 30%;
+  background-color: #ffb03b;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.card-title{
+  position: relative;
+  margin-top: 0.5em;
+}
 
-  /* Right column */
-  .rightcolumn {
-    float: right;
-    width: 50%;
-    background-color: #ffb03b;
-    padding-left: 20px;
-    color: #fff;
-  }
-  card {
-    background-color: #ffb03b;
-    padding: 20px;
-    margin-top: 100px;
-    margin-bottom: 100%;
-  }
+.card {
+  border: 1px solid;
+  border-color: #ffb03b;
+  position:align-center;
+  padding: 20px;
+  max-height: 100%;
+  margin: 20px;
+}
 
-    .text {
-    top: 100px;
-  }
+.text {
+  top: 100px;
+}
 
-  .menu-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Menu.jpg") no-repeat center center/fixed;
-    background-size: cover;
-  }
+/* Footer */
+.footer {
+  position: relative;
+  color: #ffb03b;
+margin-top: 40px;
+  font-family: 'Courgette', cursive;
+  text-align: center;
+}
 
-  .reservations-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Reservations.jpg") no-repeat center center/fixed;
-    background-size: cover;
-  }
-
-  .hours-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Hours.jpg") no-repeat center center/fixed;
-    background-size: cover;
-  }
-
-  .contact-page {
-    background: url("C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\img\Contact.jpg") no-repeat center center/fixed;
-    background-size: cover;
-  }
-
-  /* Footer */
-  .footer {
-    justify-content: space-between;
-    color: #ffb03b;
-    padding: 1em;
-    padding: 20px;
-    font-family: 'Courgette', cursive;
-    text-align: center;
-    margin-top: 2em;
-    margin-bottom: 2em;
-  }
-
-  }
