--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 /* Global styles */
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.8;
   color: #333333;
@@ -30,7 +25,7 @@ a {
   color: #ffb03b;}
 
 a:hover {
-  color: #0078d7;
+  color: #7638cb;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,9 +33,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header {
-  position: flex;
+  position: relative;
  background-color: #ffb03b;
- z-index: -1;
  font-family: "Poppins", sans-serif;
  font-size: 20px;
  padding: 10px;
@@ -57,6 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar {
+  display: flex;
   position: relative;
   align-items: center;
   justify-content: space-between;
@@ -68,40 +63,49 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
+.navbar-toggler {
+  align-self: flex-end;
+}
+
+@media (max-width: 767px) {
+  .navbar-toggler {
+    float: right;
+  }
+}
+
+
 ul {
   list-style-type: none;
 }
 
 /* Home page styles */
-container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-  width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0);
-  padding-left: calc(var(--bs-gutter-x) * 0);
-  margin-right: auto;
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+   width: 100%;
+   margin-right: auto;
   margin-left: auto;
   text-align: center;
 }
 
 img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .fakeimg {
   background-color: #aaa;
-  width: 100%;
+  width: auto;
   padding: 20px;
-
 }
-.fakeimg-1 {
+.fakeimg-1,.fakeimg-2 {
   background-color: #aaa;
-  width: 100%;
+  width: auto;
   padding: 20px;
-  color: white;
-
 }
+
+.fakeimg-3 {
+  position: absolute;
+}
+
 /* Reservation page styles */
 form {
   margin-top: 50px;
@@ -111,26 +115,14 @@ label {
   font-weight: 600;
 }
 
-/* Menu page styles */
-.menu-item {
-  margin-bottom: 30px;
-}
-
-.menu-item img {
-  width: 100%;
-  max-width: 300px;
-  margin-bottom: 20px;
-}
-
 /* Contact page styles */
-#map {
+.map {
+  justify-content: space-between;
+  display: flex;
   position: auto;
-  height: auto;
-  max-width: 100%;
-  top: 0;
-  bottom: 0;
-  left: 400px;
-  right: 0;
+  height: 300px;
+  width: 100%;
+  margin-bottom: 70px;
 }
 
 /* Hours page styles */
@@ -155,10 +147,10 @@ label {
 
 /* Styles for the heading */
 .hours-page h1 {
-  font-size: 36px;
-  color: #333;
+  font-size: 40px;
+  color: #ffb03b;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 40px;
 }
 
 /* Styles for the unordered list */
@@ -214,10 +206,6 @@ label {
   opacity: 0.8;
   color: rgb(85, 85, 85);
   width: 100%;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
 }
 
 @media (min-width: 768px) {
@@ -244,14 +232,45 @@ label {
 .transparent-btn:hover, #menu-btn:hover {
   color: #ff6f61; /* Hover color */
 }
+
+.carousel-item img{
+background-size: cover;
+}
+
+.carousel-slide {
+  object-fit: slide;
+}
+
 .carousel-item {
-  margin: 0;
+height: 100%;
+width: 100%;
 }
 
 .carousel-inner {
   margin: auto;
   padding: auto;
+
 }
+
+/* Style the indicators */
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ccc;
+  bottom: 50px;
+}
+
+/* Style the active indicator */
+.carousel-indicators .active {
+  display:flex;
+  width: 12px;
+  height: 12px;
+  margin: 0;
+  background-color: #ccc;
+  flex-direction: row;
+}
+
 .carousel-caption {
   justify-content: space-between;
   width: 100%;
@@ -267,6 +286,8 @@ label {
   margin-bottom: 7em;
   margin-right: 1em;
 }
+
+
 .caption-heading {
   font-size: 2.4em;
   padding-bottom: 5px;
@@ -286,6 +307,7 @@ label {
   width: 70%;
   text-align: center;
   margin-bottom: 30px;
+  border-color: #ffb03b;
 }
 
 /* Right column */
@@ -303,24 +325,91 @@ label {
   margin-top: 0.5em;
 }
 
+
 .card {
-  border: 1px solid;
+  justify-content: space-between;
   border-color: #ffb03b;
   position:align-center;
   padding: 20px;
-  max-height: 100%;
   margin: 20px;
+  font-size: larger;
 }
 
 .text {
   top: 100px;
 }
 
+.p2 {
+  font-size: large;
+  margin-top:20px;
+}
+
+.c1{
+  background-color: #ffb03b;
+  display: flex;
+}
+
+
+
+.c2 {
+  margin: 0;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  max-width: 100%;
+}
+
+.c3 {
+  display: flex;
+  margin: 0;
+}
+
+.c4 {
+  position: absolute;
+  max-width: 100%;
+  margin: 0;
+}
+
+.r1 {
+  flex-direction: column;
+  display: flex;
+  float: right;
+  width: 30%;
+  background-color: #ffb03b;
+  margin-top: 20px;
+  height: 1070px;
+}
+.r2 {
+  flex-direction: column;
+  display: flex;
+  float: right;
+  width: 30%;
+  background-color: #ffb03b;
+}
+
+.r3 {
+  flex-direction: column;
+  display: flex;
+  float: right;
+  width: 30%;
+  background-color: #ffb03b;
+  margin:0;
+}
+
+.course {
+  color: #ffb03b;
+  margin: 50px;
+}
+
+.dish {
+  margin-top: 40px;
+}
+
 /* Footer */
 .footer {
+  display: flexbox;
   position: relative;
   color: #ffb03b;
-margin-top: 40px;
+  margin-top: 40px;
   font-family: 'Courgette', cursive;
   text-align: center;
 }
