--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ width: 100%;
   border-radius: 50%;
   background-color: #ccc;
   bottom: 50px;
-}
+ }
 
 /* Style the active indicator */
 .carousel-indicators .active {
@@ -287,6 +287,9 @@ width: 100%;
   margin-right: 1em;
 }
 
+.card-title {
+  color: #ffb03b;
+}
 
 .caption-heading {
   font-size: 2.4em;
@@ -326,13 +329,12 @@ width: 100%;
   margin-top: 0.5em;
 }
 
-
 .card {
   justify-content: space-between;
   border-color: #ffb03b;
-  position:align-center;
-  padding: 20px;
-  margin: 20px;
+  position:relative;
+  padding: 10px;
+  margin: 10px;
   font-size: larger;
 }
 
@@ -350,8 +352,6 @@ width: 100%;
   display: flex;
 }
 
-
-
 .c2 {
   margin: 0;
   margin-bottom: 20px;
@@ -360,8 +360,11 @@ width: 100%;
 }
 
 .c3 {
-  display: flex;
-  margin: 0;
+  justify-content: space-between;
+  border-color: #ffb03b;
+  position:relative;
+  padding: 10px;
+  margin: 10px;
 }
 
 .c4 {
@@ -376,8 +379,8 @@ width: 100%;
   float: right;
   width: 30%;
   background-color: #ffb03b;
-  margin-top: 20px;
-  height: 1070px;
+  margin-top: 10px;
+  height: 1000px;
 }
 .r2 {
   flex-direction: column;
