--- a/style.css
+++ b/style.css
@@ -63,12 +63,12 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-.navbar-toggler {
-  align-self: flex-end;
+.navbar-toggler-icon {
+  float: right;
 }
 
 @media (max-width: 767px) {
-  .navbar-toggler {
+  .navbar-toggler-icon {
     float: right;
   }
 }
@@ -230,15 +230,11 @@ label {
 }
 
 .transparent-btn:hover, #menu-btn:hover {
-  color: #ff6f61; /* Hover color */
-}
-
-.carousel-item img{
-background-size: cover;
+  color: #555;
 }
 
 .carousel-slide {
-  object-fit: slide;
+  object-fit: cover;
 }
 
 .carousel-item {
@@ -252,7 +248,6 @@ width: 100%;
 
 }
 
-/* Style the indicators */
 .carousel-indicators li {
   width: 10px;
   height: 10px;
@@ -261,7 +256,6 @@ width: 100%;
   bottom: 50px;
  }
 
-/* Style the active indicator */
 .carousel-indicators .active {
   display:flex;
   width: 12px;
@@ -321,7 +315,7 @@ width: 100%;
   float: right;
   width: 30%;
   background-color: #ffb03b;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-bottom: 30px;
 }
 .card-title{
